--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
-    transform: translateY(-3px)
+    transform: translateY(-3px);
 }
 
 .hand {
@@ -56,15 +56,8 @@ body {
     background-color: black;
     top: 50%;
     transform-origin: 100%;
-    /* transform: rotate(90deg); */
+    transform: rotate(90deg);
     transition: all 0.05s;
     transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
 }
 
-.minutes-hand {
-    width: 35%;
-}
-
-.hour-hand {
-    width: 25%;
-}
