--- a/style.css
+++ b/style.css
@@ -37,12 +37,15 @@ body {
     margin: 50px auto;
     width: 40rem;
     height: 40rem;
-    border: 20px solid rgb(201, 63, 63);
+    border: 20px solid rgb(52, 39, 39);
     border-radius: 50%;
     padding: 2rem;
 }
 
 .clock {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
     width: 100%;
     height: 100%;
@@ -54,6 +57,7 @@ body {
     width: 50%;
     height: 5px;
     background-color: black;
+    right: 50%;
     top: 50%;
     transform-origin: 100%;
     transform: rotate(90deg);
@@ -61,3 +65,25 @@ body {
     transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
 }
 
+.minutes-hand {
+    width: 40%;
+}
+
+.hour-hand {
+    width: 30%;
+}
+
+
+.clock span {
+    position: absolute;
+    inset: -15px;
+    text-align: center;
+    transform: rotate(calc(30deg * var(--i)));
+}
+
+.clock span b {
+    display: inline-block;
+    font-size: 2rem;
+    font-weight: 500;
+    transform: rotate(calc(-30deg * var(--i)));
+}
